--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,27 @@
 spring.application.name=BaytAlAmana
 # SQL Server database configuration
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=BaytAlAmanaDB;encrypt=true;trustServerCertificate=true
-spring.datasource.username=db_admin_1
+spring.datasource.url=jdbc:mysql://localhost:3306/baytalamana
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=BaytAlAmanaDB;encrypt=true;trustServerCertificate=true
+spring.datasource.username=root
 spring.datasource.password=Investment2025
 
-# JPA (Hibernate) properties
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=dbo
+# JPA (Hibernate) properties (Updated for MySQL)
+#spring.jpa.hibernate.ddl-auto=none (Old)
+#spring.jpa.generate.ddl-auto=true (Old)
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl.auto = update
+#spring.jpa.properties.hibernate.default_schema=dbo (Old)
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+#MySQL props
+#spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
+#spring.datasource.username=your_username
+#spring.datasource.password=your_password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
