Google Drive Image Upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+google.drive.folder-id=1LqlojNilESls9Bpofw8pRaBVkNwrpFBD
 
+#AIzaSyAF4judX0HYFeAs_mJhZywtIwqKAINZykw Google Drive API Key
