investment-images data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 google.drive.folder-id=1LqlojNilESls9Bpofw8pRaBVkNwrpFBD
 
 #AIzaSyAF4judX0HYFeAs_mJhZywtIwqKAINZykw Google Drive API Key
+
+# Max file size per file
+spring.servlet.multipart.max-file-size=10MB
+
+# Max total request size
+spring.servlet.multipart.max-request-size=50MB
